--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "roles/prometheus"]
 	path = roles/prometheus
-	url = https://gitlab.com/cosandr/ansible-prometheus
+	url = git@gitlab.com:cosandr/ansible-prometheus.git
 [submodule "roles/grafana"]
 	path = roles/grafana
-	url = https://gitlab.com/cosandr/ansible-grafana
+	url = git@gitlab.com:cosandr/ansible-grafana.git
+[submodule "roles/nginx"]
+	path = roles/nginx
+	url = git@gitlab.com:cosandr/ansible-nginx.git
