--- a/role_vars/prometheus.yml
+++ b/role_vars/prometheus.yml
@@ -26,10 +26,10 @@ prometheus_scrape_configs:
 
   - job_name: "node"
     static_configs:
-      - targets: ["localhost:{{ node_port }}"]
+      - targets: ["localhost:{{ node_exporter_port }}"]
         labels:
           instance: "{{ server_label }}"
-      - targets: ["{{ desktop_ip }}:{{ node_port }}"]
+      - targets: ["{{ desktop_ip }}:{{ node_exporter_port }}"]
         labels:
           instance: "{{ desktop_label }}"
 
