--- a/server.yml
+++ b/server.yml
@@ -12,7 +12,7 @@
     - role_vars/node_exporter.yml
     - role_vars/postgres_exporter.yml
     - role_vars/prometheus.yml
-    - role_vars/systemd_timers.yml
+    - role_vars/systemd.yml
   vars:
     cadvisor_port: "{{ ports.cadvisor }}"
     cadvisor_skip_install: false
@@ -55,8 +55,8 @@
     - import_role: { name: nginx }
       tags: ["nginx"]
 
-    - import_role: { name: systemd_timers }
-      tags: ["systemd_timers"]
+    - import_role: { name: systemd }
+      tags: ["systemd"]
 
     - import_role: { name: cadvisor }
       tags: ["prometheus-stack", "cadvisor"]
